# mach

./: .clang-format  .clang-format-ignore  .gitignore  .gitmodules  ARCHITECTURE.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  STYLE.md  TODO.md  build.bat  build.sh  mach.h  nob.c
.github/workflows/: linux.yml  macos.yml  release.yml  windows.yml
assets/: .gitignore
assets/sprites/: README.md
cmake/: CompilerWarnings.cmake  Superbuild.cmake
docs/: engine-redesign-2026-06-28.md  gdd.typ
scripts/: build.ps1  build.sh  check_namespace.sh  download_stb.ps1  download_stb.sh  release_notes.sh  setup.bat  setup.ps1  setup.sh  shaders.bat  shaders.ps1  shaders.sh  stats.sh  tags.sh
src/: CMakeLists.txt  engine.c  engine.h  game_lib.c  host.c  mach.c  mach.h  main.cpp
src/base/: base.h
src/core/: core.c  core.h
src/debug/: debug.h
src/engine/: app.h  debug.h  os.h  rgfw.h  ui.h
src/engine/base/: base.h
src/engine/core/: core.c  core.h
src/engine/input/: input.c  input.h
src/engine/math/: math.c  math.h
src/engine/mem/: arena.c  arena.h
src/engine/render/: camera.c  camera.h  color.h  draw.c  draw.h  font.c  font.h  font_truetype.c  font_truetype.h  gl.h  gpu.c  gpu.h  image.c  image.h  mesh.c  mesh.h  render.c  render.h  render2d.c  render2d.h  shaders_generated.h
src/engine/render/shaders/: lit.frag.hlsl  lit.vert.hlsl  overlay.frag.hlsl  overlay.vert.hlsl
src/engine/ui/: clay_ui.c  clay_ui.h
src/game/: app.c  app.h  effects.c  effects.h  game.c  game.h  menu.c  menu.h  render_game.c  render_game.h  save.c  save.h  sprites.c  sprites.h
src/game/world/: world.c  world.h
src/mach/: engine.cpp  engine.h
src/math/: math.c
src/render/: font.c  font.h  render.c  render.h
src/ui/: ui.h
src/world/: world.c  world.h
